# CMake-lab

./: README.md
hello/: CMakeLists.txt  hello.cpp  hello.h.in
install/: CMakeLists.txt  config.h.in  printMath.cxx
install/MyLib/: CMakeLists.txt  mygcd.cxx  mylib.h  myswap.cxx
swap-lib/: CMakeLists.txt  swap.cpp
use-lib/: CMakeLists.txt  config.h.in  main.cxx
use-lib/MyLibrary/: CMakeLists.txt  mygcd.cxx  mylib.h
use-lib/tmp/: a.cxx  a.out
